--- a/TesteIO.qsf
+++ b/TesteIO.qsf
@@ -1156,4 +1156,5 @@ set_global_assignment -name VERILOG_FILE chromosomeProcessingStateMachine.v
 set_global_assignment -name SYSTEMVERILOG_FILE parameters.sv
 set_global_assignment -name CDF_FILE output_files/Chain1.cdf
 set_global_assignment -name VERILOG_FILE ProcessamentoSerial.v
+set_global_assignment -name VERILOG_FILE Decoder7.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
