--- a/novoGenotipo/top.qsf
+++ b/novoGenotipo/top.qsf
@@ -60,4 +60,5 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name VIRTUAL_PIN ON -to out
 set_instance_assignment -name VIRTUAL_PIN ON -to cromossomo
 set_instance_assignment -name VIRTUAL_PIN ON -to inp
+set_global_assignment -name SYSTEMVERILOG_FILE parameters.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
