--- a/TesteIO.qsf
+++ b/TesteIO.qsf
@@ -1158,3 +1158,6 @@ set_global_assignment -name CDF_FILE output_files/Chain1.cdf
 set_global_assignment -name VERILOG_FILE ProcessamentoSerial.v
 set_global_assignment -name VERILOG_FILE Decoder7.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VERILOG_FILE newGenetico.v
+set_global_assignment -name VERILOG_FILE newFenotipo.v
+set_global_assignment -name VERILOG_FILE newlogic_e.v
