Exibe o estado atual nos LEDs

--- a/novoDesign/TesteIO.qsf
+++ b/novoDesign/TesteIO.qsf
@@ -1145,7 +1145,6 @@ set_instance_assignment -name GLOBAL_SIGNAL OFF -to u0|hps_0|hps_io|border|hps_s
 set_instance_assignment -name GLOBAL_SIGNAL OFF -to u0|hps_0|hps_io|border|hps_sdram_inst|p0|umemphy|uread_datapath|reset_n_fifo_wraddress[3] -tag __hps_sdram_p0
 set_instance_assignment -name ENABLE_BENEFICIAL_SKEW_OPTIMIZATION_FOR_NON_GLOBAL_CLOCKS ON -to u0|hps_0|hps_io|border|hps_sdram_inst -tag __hps_sdram_p0
 set_instance_assignment -name PLL_COMPENSATION_MODE DIRECT -to u0|hps_0|hps_io|border|hps_sdram_inst|pll0|fbout -tag __hps_sdram_p0
-set_global_assignment -name VERILOG_FILE Circuito2x2manual.v
 set_global_assignment -name VERILOG_FILE top.v
 set_global_assignment -name QSYS_FILE testeio.qsys
 set_global_assignment -name CDF_FILE output_files/prog.cdf
@@ -1157,4 +1156,5 @@ set_global_assignment -name VERILOG_FILE Decoder7.v
 set_global_assignment -name VERILOG_FILE newGenetico.v
 set_global_assignment -name VERILOG_FILE newFenotipo.v
 set_global_assignment -name VERILOG_FILE newlogic_e.v
+set_global_assignment -name CDF_FILE output_files/programmer.cdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
